--- a/style.css
+++ b/style.css
@@ -10,12 +10,7 @@ html {
 
 body {
   background-color: rgb(253, 251, 251);
-  color: rgb(253, 251, 251);
   font-family: 'Poppins', sans-serif;
-}
-
-li {
-  list-style-type: none;
 }
 
 a {
@@ -49,15 +44,16 @@ a {
   display: flex;
   align-items: center;
   gap: 3.2rem;
+  list-style-type: none;
 }
 
-.navbar ul li a{
+.navbar ul li a {
   font-size: 1.6rem;
   font-weight: 500;
   color: rgb(253, 251, 251);
 }
 
-.navbar ul li a:hover{
+.navbar ul li a:hover {
   display: inline-flex;
   transition: .3s;
   transform: scale(1.03);
@@ -70,5 +66,83 @@ a {
   padding: 1rem 2rem;
   border-radius: 0.4rem;
 }
+
+/* Introdução */
+
+.introduction {
+  margin-top: 8.4rem;
+  background: #272222;
+  padding: 4.5rem;
+  color: rgb(253, 251, 251);
+
+}
+
+.intro-text h1{
+  font-size: 3.2rem;
+  font-weight: 700;
+  line-height: 1.3;
+  max-width: 500px;
+}
+
+.intro-text p{
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.2;
+  max-width: 440px;
+  color: rgba(255, 255, 255, 0.6);
+  margin-top: 1.2rem;
+}
+
+.licoes {
+  margin-top: 6.4rem;
+  margin-bottom: 4rem;
+}
+
+.title {
+  line-height: 1;
+  font-size: 2.4rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.title::after {
+  content: "";
+  width: 9rem;
+  height: 4px;
+  background-color: rgb(94, 141, 230);
+  display: block;
+  margin: 0.8rem auto 0 auto;
+}
+
+.container-licoes {
+  width: 1040px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  gap: 3rem;
+}
+
+.card-list{
+  width: min(45%, 500px);
+  border-radius: 0.4rem;
+  margin: 4rem auto;
+  padding: 2rem 4rem;
+  background-color: #D9D9D9;
+  display: grid;
+}
+
+.card-list h1{
+  text-align: center;
+  font-size: 1.8rem;
+  color: #272222;
+  margin-bottom: 2.4rem;
+}
+
+.card-list li{
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: rgba(39, 34, 34, 0.8);
+}
+
 
 
