--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 
@@ -128,7 +129,8 @@ a {
   margin: 4rem auto;
   padding: 2rem 4rem;
   background-color: #D9D9D9;
-  display: grid;
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
+
 }
 
 .card-list h1{
@@ -144,5 +146,66 @@ a {
   color: rgba(39, 34, 34, 0.8);
 }
 
+.container-artigo {
+  width: 1040px;
+  margin: 4rem auto;
+  display: flex;
+  justify-content: space-between;
+  gap: 3rem;
+}
+
+.card-artigo {
+  width: min(45%, 500px);
+  border-radius: 0.4rem;
+  margin: 4rem auto;
+  padding: 2rem 4rem;
+  background-color: #D9D9D9;
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
+
+
+}
+
+.card-artigo h2{
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+}
+
+.card-artigo h2::before{
+  content: "";
+  width: 2rem;
+  height: 4px;
+  background-color: rgb(94, 141, 230);
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 8px;
+}
+
+.card-artigo p {
+  font-size: 1.4rem;
+  line-height: 1.3;
+}
+
+#rodape {
+  background-color: rgb(94, 141, 230);
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#rodape p{
+  font-weight: 400;
+  font-size: 1.8rem;
+}
+
+#rodape p a{
+  color: rgb(253, 251, 251);
+  font-weight: 600;
+}
+
+#rodape p a:hover{
+  transition: .3s;
+  color: rgba(39, 34, 34, 0.8);
+}
 
 
