--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
   background-color: rgb(253, 251, 251);
-  font-family: 'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
 }
 
 a {
@@ -19,7 +19,6 @@ a {
 }
 
 /* container */
-
 .container {
   max-width: 1240px;
   margin: 0 auto;
@@ -56,36 +55,35 @@ a {
 
 .navbar ul li a:hover {
   display: inline-flex;
-  transition: .3s;
+  transition: 0.3s;
   transform: scale(1.03);
 }
 
 .button-nav {
   display: flex;
   gap: 1rem;
-  background-color: #272222;
+  background-color: '#272222';
   padding: 1rem 2rem;
   border-radius: 0.4rem;
 }
 
 /* Introdução */
-
 .introduction {
   margin-top: 8.4rem;
-  background: #272222;
+  background-color: #272222;
   padding: 4.5rem;
   color: rgb(253, 251, 251);
 
 }
 
-.intro-text h1{
+.intro-text h1 {
   font-size: 3.2rem;
   font-weight: 700;
   line-height: 1.3;
   max-width: 500px;
 }
 
-.intro-text p{
+.intro-text p {
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.2;
@@ -106,13 +104,13 @@ a {
   text-transform: uppercase;
 }
 
-.title::after {
-  content: "";
+.title:after {
+  content: '';
   width: 9rem;
   height: 4px;
   background-color: rgb(94, 141, 230);
   display: block;
-  margin: 0.8rem auto 0 auto;
+  margin: 0.8rem auto 0;
 }
 
 .container-licoes {
@@ -123,24 +121,23 @@ a {
   gap: 3rem;
 }
 
-.card-list{
+.card-list {
   width: min(45%, 500px);
   border-radius: 0.4rem;
   margin: 4rem auto;
   padding: 2rem 4rem;
-  background-color: #D9D9D9;
+  background-color: '#D9D9D9';
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
-
 }
 
-.card-list h1{
+.card-list h1 {
   text-align: center;
   font-size: 1.8rem;
-  color: #272222;
+  color: '#272222';
   margin-bottom: 2.4rem;
 }
 
-.card-list li{
+.card-list li {
   font-size: 1.4rem;
   font-weight: 500;
   color: rgba(39, 34, 34, 0.8);
@@ -159,19 +156,17 @@ a {
   border-radius: 0.4rem;
   margin: 4rem auto;
   padding: 2rem 4rem;
-  background-color: #D9D9D9;
+  background-color: '#D9D9D9';
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
-
-
 }
 
-.card-artigo h2{
+.card-artigo h2 {
   font-size: 1.8rem;
   margin-bottom: 2rem;
 }
 
-.card-artigo h2::before{
-  content: "";
+.card-artigo h2:before {
+  content: '';
   width: 2rem;
   height: 4px;
   background-color: rgb(94, 141, 230);
@@ -185,6 +180,36 @@ a {
   line-height: 1.3;
 }
 
+.tabela {
+  width: 500px;
+  margin: 0 auto 4rem;
+  text-align: center;
+  border-spacing: 1rem;
+}
+
+.tabela tr th {
+  border: 2px solid '#272222';
+  padding: 1rem;
+  font-size: 1.6rem;
+  color: '#272222';
+  margin: 0 1rem;
+}
+
+.tabela tr td {
+  font-size: 1.2rem;
+  color: rgba(39, 34, 34, 0.8);
+  border: 1px solid rgba(39, 34, 34, 0.8);
+  padding: 0.5rem 0;
+}
+
+.tabela tr td:hover {
+  cursor: pointer;
+  font-weight: 500;
+  transform: scale(1.03);
+  border: 2px solid rgba(39, 34, 34, 0.8);
+  transition: 0.3s;
+}
+
 #rodape {
   background-color: rgb(94, 141, 230);
   padding: 2rem;
@@ -193,19 +218,17 @@ a {
   align-items: center;
 }
 
-#rodape p{
+#rodape p {
   font-weight: 400;
   font-size: 1.8rem;
 }
 
-#rodape p a{
+#rodape p a {
   color: rgb(253, 251, 251);
   font-weight: 600;
 }
 
-#rodape p a:hover{
+#rodape p a:hover {
   transition: .3s;
   color: rgba(39, 34, 34, 0.8);
 }
-
-
